--- a/.github/workflows/dockertest.yml
+++ b/.github/workflows/dockertest.yml
@@ -24,5 +24,5 @@ jobs:
             username: ${{ secrets.SERVICE_PRINCIPAL_ID }}
             password: ${{ secrets.SERVICE_PRINCIPAL_PASSWORD }}
 
-        - run: docker build ./WebApplication3/Dockerfile -t ${{ env.IMAGE_NAME }}
+        - run: docker build ./WebApplication3 -t ${{ env.IMAGE_NAME }}
         - run: docker push ${{ env.IMAGE_NAME }}
